# nlir

./: .gitignore  README.md  main.py  nlir-bench.py  nlir-cli.py  pyproject.toml  translate-cli.py
conf/: conf_bb.yaml  conf_lf_tactics.yaml  conf_lf_template.yaml  config.yaml  my_config.yaml  myconfig.yaml  translate_config.yaml
conf/agent/: claude-sonnet.yaml  codellama7b.yaml  codestral.yaml  deepseek.yaml  gpt-mini.yaml  gpt-o1-mini.yaml  gpt-o1.yaml  gpt.yaml  grok.yaml  mistral.yaml  qwen.yaml  qwencode7b.yaml
conf/benchmark/: bb42.yaml  example.yaml  fminiF2F.yaml  logical_foundations.yaml  logical_foundations_non_trivial.yaml  miniF2F.yaml
examples/: bar.v  foo.v
examples/small_miniF2F/lean/src/: test.lean  valid.lean
nlir/: __main__.py  agent.py  extract.py  petanque.py  replay.py  search.py  utils.py
nlir/prompts/: comparison_prompts.py  tactic_prompts.py  template_prompts.py  translate_prompt.py
nlir/translate/: extract_theorems.py  prompt.py
